force-app/main/default/objects/BGCM__Test__c/BGCM__Test__c.object-meta.xml
<CustomObject>
    <label>Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>