force-app/main/default/objects/BGCM__Test__c/fields/BGCK__Answer__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>BGCK__Answer__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>