force-app/main/default/objects/BGCM__Test__c/fields/BGCM__Account__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field for testing purposes.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>