force-app/main/default/objects/BGCM__Test__c/fields/BGCM__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>