force-app/main/default/objects/BGCM__Test__c/fields/BGCM__Issued_Number__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Issued_Number__c</fullName>
    <label>Issued Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>