force-app/main/default/objects/BGCM__Test__c/fields/BGCM__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Tracking_Number__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>