force-app/main/default/objects/BGCM__Test__c/fields/BGCM__Type__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>