force-app/main/default/objects/BGCM__Test__c/listViews/BGCM__All.listView-meta.xml
<ListView>
    <fullName>BGCM__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>OK</value>
    </filters>
    <label>All</label>
</ListView>