force-app/main/default/objects/BGCM__Test__c/listViews/BGCM__test0.listView-meta.xml
<ListView>
    <fullName>BGCM__test0</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notEqual</operation>
        <value>abc</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>first</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>last</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notEqual</operation>
        <value>222</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>notEqual</operation>
        <value>7/2/2015 12:00 AM</value>
    </filters>
    <label>test0</label>
</ListView>